--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   color: #333;
   font-family: Helvetica, Arial, Verdana, sans-serif;
@@ -13,6 +12,21 @@ ul {
   padding: 0;
 }
 
+h1, h2 {
+  font-family: 'Lato', Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 100;
+  margin: 0;
+}
+
+.sub-heading {
+  font-size: 2rem;
+  font-weight: 300;
+}
+
 a {
   color: #FFF;
   text-decoration: none;
@@ -24,9 +38,9 @@ a {
 
 .navbar {
   background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, .2)), color-stop(0.05, rgba(0, 0, 0, 0)), color-stop(0.97, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, .45))), -webkit-gradient(linear, 0 0, 100% 0, from(rgba(0, 0, 0, .2)), color-stop(0.002, rgba(0, 0, 0, 0)), color-stop(0.998, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, .2))), url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAA9QAAAAkCAMAAABfcIIyAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAHVQTFRFAAAA%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F5YtmQAAAACd0Uk5TAAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8gISIjJCUmZiD6WAAAAdlJREFUeF7t3btuFEEQheFzunotGYkIERA4spn3fyeHiAgEEtsXB82s2eEJavR%2F0Wjyo75XWfHpw4MkSXNqCkA2lr2%2B%2Fvz63n15qpI0x5yTSAM52XaxJLVXf%2FkoaY6xQk2sgXy8Ql2KJf3wS5HG6HMMQg3kZNkuxVGKNLxJo48%2BxhxTpBrIx7JcXEqUKJI3zd77CjWLaiAle4U6Iixv6q33MfocTL%2BBlCy7OEqJqCFvs%2FV2m3%2BTaiAd6zb7rlHtrbc1VA%2Bm30BSa%2B%2B7RNSo4a21thbVTL%2BBnCy7rCV1rdXbtbXW%2B%2Bh%2Ft78BZLM2v6NE1Fov%2FrpC3Zl%2BA2l5H6lrrRe%2FXNu%2BqCbUQE57qGvsoW5t9D4H028gJculOKLUWuvFz%2B16O9NipAZSsm8nWpfq53ZlTQ3k9s%2BamlADZ0CogZMh1MDJEGrgZAg1cDL%2Fh5ojLSC1%2ByMtLp8A2R0un3BNFEjv%2FpooDzqA9O4fdPD0Esju8PSSIglAdsciCZQzArI7lDOat30yCg8CGe2FB1eovZcI7oMSwUBSq0TwWlQHxfyBEzgW86ftDpDase0ODfKA7A4N8mhlC2R318r2px%2BeQqLpPJDae9P5%2FmrVz491%2FWekBlKy7PXVfn9rb9xXsMD2wdOcAAAAAElFTkSuQmCC') no-repeat 50% 50%, -webkit-gradient(linear, 0 100%, 0 0, from(#666), color-stop(0.5, #5e5e5e), color-stop(0.51, #707070), to(#808080));
-  box-shadow: rgba(0,0,0,0.3) 0 1px 2px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 2px;
   border-radius: 4px;
-  height: 36px;
+  height: 34px;
   margin: 20px auto 0;
   width: 980px;
   z-index: 999;
@@ -39,8 +53,26 @@ a {
 }
 
 .list-item {
-  margin: auto 0;
+  font-size: 0.85rem;
+  border-right: 1px solid grey;
+  border-left: 1px solid #505050;
+  padding-top: 8px;
   width: 11.111%;
+}
+
+.list-item:first-of-type {
+  padding-top: 4px;
+  border-left: none;
+}
+
+.list-item:last-of-type {
+  padding-top: 6px;
+  border-right: none;
+}
+
+.list-item:hover {
+  background: url(../assets/hover-background.jpg) 0 0 repeat;
+  border-radius: 4px;
 }
 
 .apple-icon {
@@ -67,19 +99,6 @@ a {
 .headings {
   color: #FFF;
   margin-top: 170px;
-}
-
-.heading {
-  font-size: 4rem;
-  font-family: 'Lato', Helvetica, sans-serif;
-  font-weight: 100;
-  margin: 0;
-}
-
-.sub-heading {
-  font-size: 2rem;
-  font-family: 'Lato', Helvetica, sans-serif;
-  font-weight: 300;
 }
 
 .anchor-heading {
@@ -116,10 +135,6 @@ a {
   width: 25%;
 }
 
-.anchor-img: {
-
-}
-
 .promo-img {
   width: 100%;
 }
@@ -153,6 +168,7 @@ a {
 .footer-list {
   align-self: flex-end;
   margin: auto 0;
+  padding-bottom: 6px;
 }
 
 .footer-list-item {
@@ -160,10 +176,6 @@ a {
   display: inline-block;
   margin: auto 0 auto .2rem;
   padding-left: .2rem;
-}
-
-.first {
-
 }
 
 .usa-logo {
